--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -5,8 +5,20 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/user" [routerLinkActive]="'active'">User</a>
+      <li class="nav-item" *appShowAuthed="true">
+        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Company</a>
+      </li>
+      <li class="nav-item" *appShowAuthed="true">
+        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Item</a>
+      </li>
+      <li class="nav-item" *appShowAuthed="true">
+        <a class="nav-link" routerLink="/profile" [routerLinkActive]="'active'">Profile</a>
+      </li>
+      <li class="nav-item" *appShowAuthed="false">
+        <a class="nav-link" routerLink="/login" [routerLinkActive]="'active'">Login</a>
+      </li>
+      <li class="nav-item" *appShowAuthed="true">
+        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Logout</a>
       </li>
     </ul>
   </div>
