--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -6,13 +6,10 @@
         <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Home</a>
       </li>
       <li class="nav-item" *appShowAuthed="true">
-        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Company</a>
+        <a class="nav-link" routerLink="/company" [routerLinkActive]="'active'">Company</a>
       </li>
       <li class="nav-item" *appShowAuthed="true">
         <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Item</a>
-      </li>
-      <li class="nav-item" *appShowAuthed="true">
-        <a class="nav-link" routerLink="/profile" [routerLinkActive]="'active'">Profile</a>
       </li>
       <li class="nav-item" *appShowAuthed="false">
         <a class="nav-link" routerLink="/login" [routerLinkActive]="'active'">Login</a>
