--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -3,7 +3,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Home</a>
+        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }">Home</a>
       </li>
       <li class="nav-item" *appShowAuthed="true">
         <a class="nav-link" routerLink="/company" [routerLinkActive]="'active'">Company</a>
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="/login" [routerLinkActive]="'active'">Login</a>
       </li>
       <li class="nav-item" *appShowAuthed="true">
-        <a class="nav-link" routerLink="/" [routerLinkActive]="'active'">Logout</a>
+        <a class="nav-link" routerLink="/logout" [routerLinkActive]="'active'">Logout</a>
       </li>
     </ul>
   </div>
